# codename

./: .gitignore  README.md  dev.yml  gencerts.sh
backend/: Cargo.toml  Dockerfile
backend/src/: board.rs  connection.rs  error.rs  game.rs  gameteam.rs  idgenerator.rs  main.rs  map.rs  request.rs  response.rs  room.rs  server.rs  session.rs  stream.rs  team.rs
certbot/: Dockerfile  entrypoint.sh  run.sh
frontend/: Dockerfile  index.html  run.sh
frontend/nginx/: dev.conf
