[package]
name = "codename"
version = "0.1.0"
authors = ["Gregory Eric Sanderson <gsanderson@jive.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.27"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
mio = { version = "0.7", features = ["os-poll", "tcp"] }
rand = "0.7.3"
